[package]
name = "task_hero"
version = "0.1.0"
authors = ["Deven Allen <dca09692@uga.edu>"]
edition = "2021"
rust-version = "1.76"  # Make sure this matches your Rust version requirement

[dependencies]
chrono = "0.4"
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Screen reader compatibility
    "default_fonts", # Embedded default fonts
    "glow",          # Rendering backend
    "persistence"    # Enables app state persistence
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

# Web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# To access the DOM (to control loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.70"
