[package]
name = "task_hero-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
chrono = "0.4"

[dependencies.task_hero]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gamification_fuzz"
path = "fuzz_targets/gamification_fuzz.rs"

[[bin]]
name = "task_points_and_dates_fuzz"
path = "fuzz_targets/task_points_and_dates_fuzz.rs"